--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,14 +4,16 @@
 @string{aps = {American Physical Society,}}
 
 @mastersthesis{AcevedoVillena2023,
-  author    = {Acevedo Villena, N.},
-  title     = {Column generation-based decomposition for large-scale feature selection problems},
-  school    = {Universidad de Chile},
-  year      = {2023},
-  type      = {Master's thesis},
-  address   = {Santiago, Chile},
-  url       = {https://repositorio.uchile.cl/handle/2250/198750},
+  author  = {Acevedo Villena, N.},
+  title   = {{Column generation}-based decomposition for large-scale feature selection problems},
+  school  = {Universidad de Chile},
+  year    = {2023},
+  type    = {Master's thesis},
+  address = {Santiago, Chile},
+  url     = {https://repositorio.uchile.cl/handle/2250/198750},
+  website = {https://repositorio.uchile.cl/handle/2250/198750},
   note      = {Available at the Institutional Repository of Universidad de Chile},
+  selected = {true},
 }
 
 @book{einstein1920relativity,
