--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,8 @@
 @string{aps = {American Physical Society,}}
 
 @mastersthesis{AcevedoVillena2023,
+  bibtex_show={true},
+  preview={wave-mechanics.gif},
   author  = {Acevedo Villena, N.},
   title   = {{Column generation}-based decomposition for large-scale feature selection problems},
   school  = {Universidad de Chile},
