--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @mastersthesis{AcevedoVillena2023,
   bibtex_show={true},
   preview={wave-mechanics.gif},
-  author  = {Acevedo Villena, N.},
+  author  = {Acevedo Villena, Nicolas},
   title   = {{Column generation}-based decomposition for large-scale feature selection problems},
   school  = {Universidad de Chile},
   year    = {2023},
