--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,9 @@
 @string{aps = {American Physical Society,}}
 
 @mastersthesis{AcevedoVillena2023,
+  abbr={Tesis},
   bibtex_show={true},
-  preview={wave-mechanics.gif},
+  preview={cubierta.jpg},
   author  = {Acevedo Villena, Nicolas},
   title   = {{Column generation}-based decomposition for large-scale feature selection problems},
   school  = {Universidad de Chile},
