--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @mastersthesis{AcevedoVillena2023,
-  abbr={Tesis},
+  abbr={Uchile},
   bibtex_show={true},
   preview={cubierta.jpg},
   author  = {Acevedo Villena, Nicolas},
@@ -14,8 +14,7 @@
   type    = {Master's thesis},
   address = {Santiago, Chile},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
-  website = {https://repositorio.uchile.cl/handle/2250/198750},
-  note      = {Available at the Institutional Repository of Universidad de Chile},
+  website = {https://repositorio.uchile.cl/handle/2250/198750}, 
   selected = {true},
 }
 
