--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,7 @@
   address = {Santiago, Chile},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
   website = {https://repositorio.uchile.cl/handle/2250/198750}, 
+  pdf = {https://repositorio.uchile.cl/bitstream/handle/2250/198750/Column-generation-based-decomposition-for-large-scale-feature-selection-problems.pdf},
   selected = {true},
 }
 
