--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,13 +10,16 @@
   author  = {Acevedo Villena, Nicolas},
   title   = {{Column generation}-based decomposition for large-scale feature selection problems},
   school  = {Universidad de Chile},
+  publisher = {Universidad de Chile},
   year    = {2023},
   type    = {Master's thesis},
   address = {Santiago, Chile},
+  location = {Santiago, Chile},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
   website = {https://repositorio.uchile.cl/handle/2250/198750}, 
   pdf = {https://repositorio.uchile.cl/bitstream/handle/2250/198750/Column-generation-based-decomposition-for-large-scale-feature-selection-problems.pdf},
   selected = {true},
+  doi={10.58011/yyb6-dk92},
 }
 
 @book{einstein1920relativity,
