[Update] Optima presentation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,20 @@
   doi={10.58011/yyb6-dk92},
 }
 
+@unpublished{acevedo_optima2022_<shortkey>,
+  author = {Acevedo Villena, Nicol{\'a}s},
+  title  = {On the Outlier Detection for Standardized Tests},
+  year   = {2022},
+  month  = mar,
+  note   = {Conference presentation (unpublished). Presented at the XIV Chilean Conference on Operations Research (OPTIMA 2021), Universidad Catolica del Maule, Talca, Chile, March 6--8, 2022},
+  website = {https://www.ucm.cl/eventos/xiv-chilean-conference-on-operations-research/},
+  supp    = {https://files.griddo.ucm.cl/scheudule-optima2021.pdf},
+  pdf     = {assets/pdf/PSU_Outliers.pdf},
+  slides  = {assets/pdf/PSU_Outliers_Slides.pdf},
+  abbr    = {OPTIMA},
+}
+
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
