--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   school  = {Universidad de Chile},
   publisher = {Universidad de Chile},
   year    = {2023},
-  type    = {Master's thesis},
+  type    = {{Master's} thesis},
   address = {Santiago, Chile},
   location = {Santiago, Chile},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
