--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,7 @@
   pdf     = {assets/pdf/PSU_Outliers.pdf},
   slides  = {assets/pdf/PSU_Outliers_Slides.pdf},
   abbr    = {OPTIMA},
+  selected = {true},
 }
 
 
