--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
 }
 
 @unpublished{acevedo_optima2022_<shortkey>,
-  author = {Acevedo Villena, Nicol{\'a}s},
+  author = {Acevedo Villena, Nicolas},
   title  = {On the Outlier Detection for Standardized Tests},
   year   = {2022},
   month  = mar,
