--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
   doi={10.58011/yyb6-dk92},
 }
 
-@unpublished{acevedo_optima2022_<shortkey>,
+@unpublished{AcevedoVillena2022,
   author = {Acevedo Villena, Nicolas},
   title  = {On the Outlier Detection for Standardized Tests},
   year   = {2022},
