[Update] Updated the pdf references

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,8 +29,8 @@
   note   = {Conference presentation (unpublished). Presented at the XIV Chilean Conference on Operations Research (OPTIMA 2021), Universidad Catolica del Maule, Talca, Chile, March 6--8, 2022},
   website = {https://www.ucm.cl/eventos/xiv-chilean-conference-on-operations-research/},
   supp    = {https://files.griddo.ucm.cl/scheudule-optima2021.pdf},
-  pdf     = {assets/pdf/PSU_Outliers.pdf},
-  slides  = {assets/pdf/PSU_Outliers_Slides.pdf},
+  pdf     = {psu-outliers-tex.pdf},
+  slides  = {psu-outliers-slides.pdf},
   abbr    = {OPTIMA},
   selected = {true},
 }
