--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,9 @@
 }
 
 @unpublished{AcevedoVillena2022,
+  abbr    = {OPTIMA},
+  bibtex_show={true},
+  preview={outlier_table.jpg},
   author = {Acevedo Villena, Nicolas},
   title  = {On the Outlier Detection for Standardized Tests},
   year   = {2022},
@@ -31,7 +34,6 @@
   supp    = {https://files.griddo.ucm.cl/scheudule-optima2021.pdf},
   pdf     = {psu-outliers-tex.pdf},
   slides  = {psu-outliers-slides.pdf},
-  abbr    = {OPTIMA},
   selected = {true},
 }
 
