--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
   publisher = {Universidad de Chile},
   year    = {2023},
   type    = {{Master's} thesis},
+  note = {{Master's} thesis, Universidad de Chile},
   address = {Santiago, Chile},
   location = {Santiago, Chile},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
