--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 
 @unpublished{AcevedoVillena2022,
   abbr    = {OPTIMA},
-  bibtex_show={true},
+  bibtex_show={false},
   preview={outlier_table.jpg},
   author = {Acevedo Villena, Nicolas},
   title  = {On the Outlier Detection for Standardized Tests},
