--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,15 +7,14 @@
   abbr={Uchile},
   bibtex_show={true},
   preview={cubierta.jpg},
-  author  = {Acevedo Villena, Nicolas},
-  title   = {{Column generation}-based decomposition for large-scale feature selection problems},
-  school  = {Universidad de Chile},
+  author   = {Acevedo Villena, Nicol{\'a}s},
+  title    = {{Column generation}-based decomposition for large-scale feature selection problems},
+  school   = {Universidad de Chile},
   publisher = {Universidad de Chile},
+  address  = {Santiago, Chile},
   year    = {2023},
   type    = {{Master's} thesis},
-  location = {{Master's} thesis, Universidad de Chile, Santiago, Chile},
-  address = {Santiago, Chile},
-  note   = {Poster presentation (unpublished). Presented at EVIC 2023 (Dec 13--15, 2023, Universidad de Chile, Santiago) and at the Workshop in Management Science (Dec 20--22, 2023, San Pedro de Atacama, Chile).},
+  note   = {Also Poster presentation (unpublished). Presented at EVIC 2023 (Dec 13--15, 2023, Universidad de Chile, Santiago) and at the Workshop in Management Science (Dec 20--22, 2023, San Pedro de Atacama, Chile).},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
   pdf = {https://repositorio.uchile.cl/bitstream/handle/2250/198750/Column-generation-based-decomposition-for-large-scale-feature-selection-problems.pdf},
   selected = {true},
