--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   type    = {{Master's} thesis},
   year    = {2023},
   month  = dec,
-  note   = {Also Poster Presentation at EVIC 2023 (Dec 13--15, 2023, Universidad de Chile, Santiago) and at the Workshop in Management Science (Dec 20--22, 2023, San Pedro de Atacama, Chile).},
+  note   = {Also Poster Presentations at EVIC 2023 (Dec 13--15, 2023, Universidad de Chile, Santiago) and at the Workshop in Management Science (Dec 20--22, 2023, San Pedro de Atacama, Chile).},
   url     = {https://repositorio.uchile.cl/handle/2250/198750},
   pdf = {https://repositorio.uchile.cl/bitstream/handle/2250/198750/Column-generation-based-decomposition-for-large-scale-feature-selection-problems.pdf},
   selected = {true},
